TEIStreamWriter dziala, dodano klase Pair do tools